# rust_web

./: .gitignore  Cargo.toml  README.md  deploy.sh  index.html  log4rs.yml  start_service.sh  stop_service.sh
cert_local/: cert.pem  key.pem
css/: main.css
doc/: note.txt
js/: main.js
log/: log.txt
md/: 00. 책 소개.md  01.프로젝트 전체 구상.md  02. 개발 환경 구성.md  03. 설계.md  04. 프로젝트 만들기.md  05. 한자 변환파일 만들기.md  06-1. 문자열 변환.md  07. 웹 서버 만들기.md  그림.pptx
src/: dueum.rs  hanja_char.rs  hanja_word.rs  lib.rs  main.rs
