[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
log = "0.4.27"
log4rs = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
